# ecl_offline

./: .gitignore  README.md
EKF/: CMakeLists.txt  CMakeLists.txt.user.7359044  Myekf2.cpp  Myekf2.h  common.h  control.cpp  ekf.cpp  ekf.h  ekf_helper.cpp  estimator_interface.h  gps_checks.cpp  mag_fusion.cpp
data/: VIOpos.txt  airsim_rec.csv  baro_data.txt  euler_estimator.txt  imgdata.csv  imgtimes.txt  imu_combined.txt  imu_data.txt  imudata.csv  mag_data.txt  p_estimator.txt
data/rtk_vision/: 03_19_48_vision_rtk_fuse_actuator_controls_0_0.csv  03_19_48_vision_rtk_fuse_actuator_outputs_0.csv  03_19_48_vision_rtk_fuse_actuator_outputs_1.csv  03_19_48_vision_rtk_fuse_battery_status_0.csv  03_19_48_vision_rtk_fuse_battery_status_1.csv  03_19_48_vision_rtk_fuse_cpuload_0.csv  03_19_48_vision_rtk_fuse_ekf2_innovations_0.csv  03_19_48_vision_rtk_fuse_estimator_status_0.csv  03_19_48_vision_rtk_fuse_home_position_0.csv  03_19_48_vision_rtk_fuse_mission_result_0.csv  03_19_48_vision_rtk_fuse_ping_0.csv  03_19_48_vision_rtk_fuse_position_setpoint_triplet_0.csv  03_19_48_vision_rtk_fuse_rate_ctrl_status_0.csv  03_19_48_vision_rtk_fuse_safety_0.csv  03_19_48_vision_rtk_fuse_sensor_preflight_0.csv  03_19_48_vision_rtk_fuse_system_power_0.csv  03_19_48_vision_rtk_fuse_telemetry_status_0.csv  03_19_48_vision_rtk_fuse_timesync_status_0.csv  03_19_48_vision_rtk_fuse_vehicle_air_data_0.csv  03_19_48_vision_rtk_fuse_vehicle_attitude_0.csv  03_19_48_vision_rtk_fuse_vehicle_attitude_setpoint_0.csv  03_19_48_vision_rtk_fuse_vehicle_global_position_0.csv  03_19_48_vision_rtk_fuse_vehicle_gps2_position_0.csv  03_19_48_vision_rtk_fuse_vehicle_gps_position_0.csv  03_19_48_vision_rtk_fuse_vehicle_land_detected_0.csv  03_19_48_vision_rtk_fuse_vehicle_local_position_0.csv  03_19_48_vision_rtk_fuse_vehicle_local_position_setpoint_0.csv  03_19_48_vision_rtk_fuse_vehicle_magnetometer_0.csv  03_19_48_vision_rtk_fuse_vehicle_rates_setpoint_0.csv  03_19_48_vision_rtk_fuse_vehicle_status_0.csv  03_19_48_vision_rtk_fuse_vehicle_status_flags_0.csv  03_19_48_vision_rtk_fuse_vehicle_vision_attitude_0.csv  03_19_48_vision_rtk_fuse_vehicle_vision_position_0.csv  air_data_0.csv  air_data_0.txt  gps_position_0.csv  gps_position_0.txt  magnetometer_0.csv  magnetometer_0.txt  px4_csv2txt.py  (+4 more)
data/rtk_vision/test/: baro.txt  gps.txt  gps2.txt  mag.txt  vision_att.txt  vision_pos.txt
mathlib/: mathlib.cpp  mathlib.h
python_tools/: ecl_offline_plot.py  px4_csv2txt.py  readme.md
